部署到github上（记得生成本机的公钥注册到github中）

--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "vite-build": "vuepress-vite build docs",
     "vite-serve": "vuepress-vite dev docs",
     "vite-clean-serve": "vuepress-vite dev docs --clean-cache",
+    
     "webpack-build": "vuepress-webpack build docs",
     "webpack-clean-serve": "vuepress-webpack dev docs --clean-cache",
-    "webpack-serve": "vuepress-webpack dev docs"
+    "webpack-serve": "vuepress-webpack dev docs",
+
+    "docs-build": "vuepress build docs",
+    "docs-clean-serve": "vuepress build docs --clean-cache",
+    "docs-serve": "vuepress dev docs"
   },
   "devDependencies": {
     "@vuepress/plugin-search": "^2.0.0-beta.38",
