--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@vuepress/plugin-search": "2.0.0-beta.38",
+    "vuepress": "^1.9.7",
     "vuepress-theme-hope": "2.0.0-beta.36",
     "vuepress-vite": "2.0.0-beta.38",
     "vuepress-webpack": "2.0.0-beta.38"
